--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: lightgray;
+    background-color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -12,5 +12,21 @@ h1 {
 }
 
 svg {
-    background-color:white;
+    background-color:rgba(25, 15, 48, 0.886);
+    box-shadow: 2px 2px 10px -2px rgba(0,0,0,.65);
+}
+
+g {
+    color: whitesmoke;
+}
+
+#legend {
+    padding-top: 15px;
+}
+
+#tooltip {
+    visibility: hidden;
+    width: auto;
+    height: auto;
+    padding-top: 15px;
 }
